Revert "couleur essay"
This reverts commit 86b0c0da20ff3a21257cff5842ab7691b0ccf8d1.

--- a/css/style.css
+++ b/css/style.css
@@ -1624,7 +1624,7 @@ ul.list-style li:last-child {
   font-size: 18px;
   font-weight: 400;
   box-shadow: 0 10px 20px 0 rgba(12, 118, 142, 0.1);
-  background: #320ad0;
+  background: #dc3545;
   padding: 5px 42px;
 }
 
