--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -305,7 +305,7 @@
       font-size: 18px;
       font-weight: 400;
       box-shadow: 0 10px 20px 0 rgba(12, 118, 142, 0.1);
-      background: #280ace !important;
+      background: #dc3545 !important;
       padding: 5px 42px;
     }
   }
