--- a/css/style.css
+++ b/css/style.css
@@ -8962,7 +8962,7 @@ blockquote .author {
 /*================ signup_area css ==============*/
 /*================ signin_left css ==============*/
 .signin_left {
-  background-image: url("../img/signup/log2.jpg");
+  background-image: url("../img/signup/C:log2.jpg");
   background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
