--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -351,7 +351,7 @@
           </ul>
         </li>
       </ul>
-      <a class="nav_btn" href="signin.html"
+      <a class="nav_btn" href="signin.php"
         ><i class="icon_profile"></i>Connecter</a
       >
     </div>
