--- a/partials/model-ticket.html
+++ b/partials/model-ticket.html
@@ -1,4 +1,4 @@
-<style>
+<style scoped>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
 
     .modal {
@@ -115,41 +115,6 @@
         font-weight: 900 !important;
     }
 </style>
-<!-- Modal
-<div
-  class="modal fade"
-  id="chose-type-ticket"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Choisi</h5>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-        >
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <button>BC</button>
-        <button>BA</button>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">
-          Close
-        </button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div> -->
 <!-- Modal -->
 <div class="modal fade" id="chose-type-ticket" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
     aria-hidden="true">
@@ -164,7 +129,7 @@
                     </div>
                     <div class="bg-image promo-img mr-3"
                         style="background-image: url('./img/bcd2.jpg'); height: 500px;">
-                        <a href="#" class="center"> Bon d'achat</a>
+                        <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#ticket-bc" class="center"> Bon d'achat</a>
                     </div>
                     <div class="content-text p-4">
                     </div>
