--- a/partials/model-ticket.html
+++ b/partials/model-ticket.html
@@ -151,27 +151,44 @@
   </div>
 </div> -->
 <!-- Modal -->
-<div class="modal fade" id="chose-type-ticket" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-    aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content rounded-0">
-            <div class="modal-body py-0">
-                <div class="d-flex main-content">
+          <div class="modal-body py-0">
 
-                    <div class="bg-image promo-img mr-3"
-                        style="background-image: url('./img/bcd2.jpg'); height: 500px;">
-                        <a href="#" class="center">Bon de commande</a>
-                    </div>
-                    <div class="bg-image promo-img mr-3"
-                        style="background-image: url('./img/bcd2.jpg'); height: 500px;">
-                        <a href="#" class="center"> Bon d'achat</a>
-                    </div>
-                    <div class="content-text p-4">
-                    </div>
-                    </form>
-                </div>
+            
+            <div class="d-flex main-content">
+              <div class="bg-image promo-img mr-3" style="background-image: url('images/img_1.jpg');">
+              </div>
+              <div class="content-text p-4">
+                <h3>Sign up to access all the resourcess</h3>
+                <p>All their equipment and instruments are alive. The sky was cloudless and of a deep dark blue.</p>
+
+                <form action="#">
+                  <div class="form-group">
+                    <label for="email">Email Address</label>
+                    <input type="email" class="form-control" id="email">
+                  </div>
+                  <div class="form-group">
+                    <label for="name">First Name</label>
+                    <input type="text" class="form-control" id="name">
+                  </div>
+                  <div class="form-group">
+                    <label for="name">Password</label>
+                    <input type="password" class="form-control" id="name">
+                  </div>
+                  <div class="form-group">
+                    <input type="submit" value="Sign up" class="btn btn-primary btn-block">
+                  </div>
+                  <div class="form-group ">
+                    <p class="custom-note"><small>By signing up you will agree to our <a href="#">Privacy Policy</a></small></p>
+                  </div>
+                </form>
+              </div>
             </div>
+
+          </div>
         </div>
+      </div>
     </div>
-</div>
 </div>
