--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -4,15 +4,8 @@
       <img src="img/logo-ipa.png" alt="logo" style="width: 100px" />
       <img src="img/logo-ipa.png" alt="logo" style="width: 100px" />
     </a>
-    <button
-      class="navbar-toggler collapsed"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="menu_toggle">
         <span class="hamburger">
           <span></span>
@@ -29,32 +22,18 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav menu ml-auto">
         <li class="nav-item dropdown active">
-          <a
-            href="#"
-            class="nav-link dropdown-toggle"
-            role="button"
-            aria-haspopup="true"
-            aria-expanded="false"
-            >Accueil</a
-          >
-          <i
-            class="arrow_carrot-down_alt2 mobile_dropdown_icon"
-            aria-hidden="true"
-          ></i>
+          <a href="#" class="nav-link dropdown-toggle" role="button" aria-haspopup="true"
+            aria-expanded="false">Accueil</a>
+          <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true"></i>
         </li>
         <li class="nav-item dropdown">
-          <a
-            href="#"
-            class="nav-link dropdown-toggle"
-            role="button"
-            aria-haspopup="true"
-            aria-expanded="false"
-            >Help</a
-          >
-          <i
-            class="arrow_carrot-down_alt2 mobile_dropdown_icon"
-            aria-hidden="true"
-          ></i>
+          <a href="#" class="nav-link dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">Help</a>
+          <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true"></i>
+        </li>
+        <li class="nav-item dropdown">
+          <a href="contact.php" class="nav-link dropdown-toggle" role="button" aria-haspopup="true"
+            aria-expanded="false">Contact</a>
+          <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true"></i>
         </li>
       </ul>
       <a class="nav_btn" href="#">Profile</a>
