fixing links and add help page

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -22,12 +22,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav menu ml-auto">
         <li class="nav-item dropdown active">
-          <a href="#" class="nav-link dropdown-toggle" role="button" aria-haspopup="true"
+          <a href="home.php" class="nav-link dropdown-toggle" role="button" aria-haspopup="true"
             aria-expanded="false">Accueil</a>
           <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true"></i>
         </li>
         <li class="nav-item dropdown">
-          <a href="#" class="nav-link dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">Help</a>
+          <a href="help.php" class="nav-link dropdown-toggle" role="button" aria-haspopup="true"
+            aria-expanded="false">Help</a>
           <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true"></i>
         </li>
         <li class="nav-item dropdown">
@@ -36,7 +37,7 @@
           <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true"></i>
         </li>
       </ul>
-      <a class="nav_btn" href="#">Profile</a>
+      <a class="nav_btn" href="profile.php">Profile</a>
     </div>
   </div>
 </nav>
