--- a/partials/footer.html
+++ b/partials/footer.html
@@ -35,32 +35,33 @@
                         </div>
                         <div class="col-lg-3 col-sm-6">
                             <div class="f_widget link_widget pl_30 wow fadeInUp" data-wow-delay="0.2s">
-                                <h3 class="f_title">home</h3>
+                                <h3 class="f_title">HOME</h3>
                                 <ul class="list-unstyled link_list">
-                                    <li><a href="#"> A propos de l'utilisation </a></li>
-                                    <li><a href="#">Exemples</a></li>
+                                   
+        
                                     <li><a href="#">Ticket</a></li>
-                                    <li><a href="#">SOlution </a></li>
+                                
                                     <li><a href="#">Bon de commande </a></li>
-                                    <li><a href="#">Heure de traveile </a></li>
+                                   
                                     <li><a href="#">Contacter nous </a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-lg-2 col-sm-6">
                             <div class="f_widget link_widget wow fadeInUp" data-wow-delay="0.4s">
-                                <h3 class="f_title">help </h3>
+                                <h3 class="f_title">HELP </h3>
                                 <ul class="list-unstyled link_list">
                                     <li><a href="index-3.html">Help Desk</a></li>
-                                    <li><a href="#">Ilustration </a></li>
-                                    <li><a href="#">Essaye</a></li>
-                                    <li><a href="#">fonctionaliter</a></li>
-                                    <li><a href="#">tutoriel</a></li>
+                                    
+                                    <li><a href="#">etape </a></li>
+                                    <li><a href="#">sujet </a></li>
+                                
 
-                                    <li><a href="#">Messages</a></li>
+                                   
                                 </ul>
                             </div>
                         </div>
+
                         <div class="col-lg-3 col-sm-6">
                             <div class="f_widget link_widget pl_70 wow fadeInUp" data-wow-delay="0.6s">
                                 <h3 class="f_title">Institu pasteur algerer</h3>
@@ -87,7 +88,7 @@
             </div>
             <div class="footer_bottom text-center">
                 <div class="container">
-                    <p>© 2022 All Rights Reserved by <a href="index.html">IPA diskfreespace</a></p>
+                    <p>© 2022 All Rights Reserved by <a href="index.html">Assia Boutakhedmit</a></p>
                 </div>
             </div>
         </footer>
