adding tamplate admin

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -37,8 +37,8 @@
           <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true"></i>
         </li>
         <li class="nav-item dropdown">
-          <a href="AdminPanel.php" class="nav-link dropdown-toggle" role="button" aria-haspopup="true"
-            aria-expanded="false">Admin</a>
+          <a href=".\polluxui-free-admin-template\template\index.html" class="nav-link dropdown-toggle" role="button"
+            aria-haspopup="true" aria-expanded="false">Admin</a>
           <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true"></i>
         </li>
       </ul>
