reorgnazing admin folder

--- a/partials/navbar2.html
+++ b/partials/navbar2.html
@@ -32,6 +32,11 @@
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true"></i>
                         </li>
                         <li class="nav-item dropdown">
+                            <a href="admin.html" class="nav-link dropdown-toggle" role="button" aria-haspopup="true"
+                                aria-expanded="false">Admin</a>
+                            <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true"></i>
+                        </li>
+                        <li class="nav-item dropdown">
                             <a href="contact.php" class="nav-link dropdown-toggle" role="button" aria-haspopup="true"
                                 aria-expanded="false">Contact</a>
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true"></i>
